--- a/index.html
+++ b/index.html
@@ -35,12 +35,7 @@
         <div class="secondpart">
             <div class="leftcontent">
                 <h3>Profile Summary</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent molestie orci ac nulla dapibus,
-                    eget
-                    suscipit felis porta. Suspendisse fringilla et libero nec commodo. In hac habitasse platea dictumst.
-                    Ut
-                    dictum faucibus urna id varius. Fusce ac felis ut diam elementum bibendum ac eu arcu. Class aptent
-                    taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                <p>I'm Arpan Roy, a final-year B.Tech student specializing in Electronics and Communication Engineering. I have expertise in analog/digital electronics, VLSI, and microprocessors, and have developed a tire pressure monitoring system using Arduino. I'm also passionate about graphic design, and front-end web development, and have strong problem-solving and leadership skills.</p>
             </div>
             <div class="rightcontent">
                 <img src="dp.jpeg" alt="Loading...">
@@ -52,12 +47,12 @@
                 <h3>Soft Skill</h3>
                 <div class="skills1">
                     <div class="leftskill1">
-                        <h6>Your Skill Here</h6>
-                        <h6>Your Skill Here</h6>
+                        <h6>Leadership Skill</h6>
+                        <h6>Time Management</h6>
                     </div>
                     <div class="rightskill1">
-                        <h6>Your Skill Here</h6>
-                        <h6>Your Skill Here</h6>
+                        <h6>Team Management</h6>
+                        <h6>Quick Learner</h6>
                     </div>
                 </div>
             </div>
@@ -65,12 +60,12 @@
                 <h3>Hard Skill</h3>
                 <div class="skills1">
                     <div class="leftskill1">
-                        <h6>Your Skill Here</h6>
-                        <h6>Your Skill Here</h6>
+                        <h6>Circuit Designing</h6>
+                        <h6>Arduino Programming</h6>
                     </div>
                     <div class="rightskill1">
-                        <h6>Your Skill Here</h6>
-                        <h6>Your Skill Here</h6>
+                        <h6>Operating System</h6>
+                        <h6>Computer Network</h6>
                     </div>
                 </div>
             </div>
@@ -78,12 +73,12 @@
                 <h3>Technical Skill</h3>
                 <div class="skills2">
                     <div class="leftskill2">
-                        <h6>Your Skill Here</h6>
-                        <h6>Your Skill Here</h6>
+                        <h6>Programming Language: C</h6>
+                        <h6>Programming Language: Java</h6>
                     </div>
                     <div class="rightskill2">
-                        <h6>Your Skill Here</h6>
-                        <h6>Your Skill Here</h6>
+                        <h6>Web Tech: HTML, CSS, Bootstrap</h6>
+                        <h6>Java Script</h6>
                     </div>
                 </div>
             </div>
@@ -93,25 +88,27 @@
         <div class="forthpart">
             <h3>Education</h3>
             <div class="qualification">
-                <h4>Educational Qualification/ Degree, Major</h4>
-                <h6>2000-2000</h6>
-                <h6>University name,city</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent molestie orci ac nulla dapibus,
-                    eget suscipit felis porta.</p>
+                <h4>Student of B.Tech in Electronics and Communication Engineering</h4>
+                <h6>2020-2024</h6>
+                <h6>Techno International New Town</h6>
+                <p>a)Pursing presently, 
+                    b)9.54 YGPA in 1st Year,
+                    c)9.5 in 2nd year,
+                    d)8.0 in 6th semester,
+                    e)Batch of 2024 (2020-2024)</p>
             </div>
             <div class="qualification">
-                <h4>Educational Qualification/ Degree, Major</h4>
-                <h6>2000-2000</h6>
-                <h6>University name,city</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent molestie orci ac nulla dapibus,
-                    eget suscipit felis porta.</p>
+                <h4>Higher Secondary</h4>
+                <h6>2018-2020</h6>
+                <h6>Mitra Institution Bhowanipur Branch, Kolkata</h6>
+                <p>Secured 87% in HS examination 2020 (Class XII)
+                </p>
             </div>
             <div class="qualification">
-                <h4>Educational Qualification/ Degree, Major</h4>
-                <h6>2000-2000</h6>
-                <h6>University name,city</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent molestie orci ac nulla dapibus,
-                    eget suscipit felis porta.</p>
+                <h4>Secondary</h4>
+                <h6>2020</h6>
+                <h6>Mitra Institution Bhowanipur Branch, Kolkata</h6>
+                <p>Secured 80% in HS examination 2020 (Class XII)</p>
             </div>
 
         </div>
@@ -119,51 +116,45 @@
         <div class="forthpart">
             <h3>Projects</h3>
             <div class="qualification">
-                <h4>Project Title</h4>
-                <h6>2000-2000</h6>
-                <h6>Group/solo Project</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent molestie orci ac nulla dapibus,
-                    eget suscipit felis porta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus qui
-                    nostrum, sapiente itaque eaque in officiis dolore? Unde odit eum blanditiis, neque placeat est
-                    dolorum repudiandae dolor harum distinctio!</p>
+                <h4>Tyre Pressure & Temperature Monitoring System
+                </h4>
+                <h6>2023</h6>
+                <h6>Group Project</h6>
+                <p>I developed a tire pressure monitoring system for heavy vehicles, providing real-time alerts for prompt action, ensuring safety and optimal performance. Instant alerts reduce accidents, costs, and enhance reliability. Safer journeys with up-to-date tire information, user-friendly interface, and wide compatibility.</p>
             </div>
             <div class="qualification">
-                <h4>Project Title</h4>
-                <h6>2000-2000</h6>
-                <h6>Group/solo Project</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent molestie orci ac nulla dapibus,
-                    eget suscipit felis porta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus qui
-                    nostrum, sapiente itaque eaque in officiis dolore? Unde odit eum blanditiis, neque placeat est
-                    dolorum repudiandae dolor harum distinctio!</p>
+                <h4>Blog Webpage where I provide all the details of our current projects
+                <a href="https://arpan54.github.io/fiversOnly/" style="font-size: 10px;">https://arpan54.github.io/fiversOnly/</a></h4>
+                <h6>2023</h6>
+                <h6>Solo Project</h6>
+                <p>Welcome to our blog page, where we showcase projects and share insightful articles. Expertly crafted by me, our clean and modern layout ensures an enjoyable reading experience. Explore captivating visuals and stay updated with our newsletter. Join us on a journey of inspiration and knowledge. Thank you for visiting!</p>
             </div>
             <div class="qualification">
-                <h4>Project Title</h4>
-                <h6>2000-2000</h6>
-                <h6>Group/solo Project</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent molestie orci ac nulla dapibus,
-                    eget suscipit felis porta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed possimus qui
-                    nostrum, sapiente itaque eaque in officiis dolore? Unde odit eum blanditiis, neque placeat est
-                    dolorum repudiandae dolor harum distinctio!</p>
+                <h4>Portfolio webpage for myself
+                    <a href=" https://royarpan-portfolio.web.app/" style="font-size: 10px;">Arpan Roy</a>
+                </h4>
+                <h6>2021</h6>
+                <h6>Solo Project</h6>
+                <p>Welcome to my official portfolio webpage. Here you will find a comprehensive collection of my work, showcasing my skills, experience, and achievements. Thank you for visiting!</p>
             </div>
         </div>
 
         <div class="fifthpart">
             <h3>Achivements</h3>
             <ul class="achivement">
-                <li>1st achivement( Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis nisi magnam
-                    incidunt sed saepe sunt dignissimos, aliquam aliquid )</li>
-                <li>2nd achivement( Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, dolorem! Quasi
-                    aspernatur perferendis non minima. )</li>
-                <li>3rd achivement ( Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis velit quae,
+                <li>I have successfully completed an internship with Anywhere Market, where I gained valuable experience in UI/UX designing. This opportunity showcased my strong teamwork capabilities and excellent time management skills.
+                </li>
+                <li>I led my team, named "Abhudaya," to an impressive top 20 position out of 132 teams in an internal hackathon, showcasing my effective leadership skills and ability to achieve successful outcomes.</li>
+                <!-- <li>3rd achivement ( Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis velit quae,
                     architecto molestias earum harum! ) </li>
                 <li>4th achivement( Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis velit quae,
-                    architecto molestias earum harum! )</li>
+                    architecto molestias earum harum! )</li> -->
             </ul>
 
         </div>
 
         <footer>
-            <h4>Copyright &copy; ATB Group</h4>
+            <h4>Copyright &copy; Arpan Roy</h4>
             <div>
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
                     <!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
